--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ad Display on Button Click</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8441249205046861" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8441249205046861"
+     crossorigin="anonymous"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,8 +25,9 @@
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-8441249205046861"
-             data-ad-slot="7806394673"
-             data-ad-format="auto"></ins>
+             data-ad-slot="3386917253"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
     </div>
     <script>
         document.getElementById('show-ad-button').addEventListener('click', function() {
