--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             try {
-                await AdController.load();
+                await AdController.load({
+                    blockId: 150 // Ваш Block ID
+                });
                 const result = await AdController.show();
                 if (result.done) {
                     console.log('Ad watched till the end');
@@ -24,3 +26,4 @@
     </script>
 </body>
 </html>
+
