--- a/index.html
+++ b/index.html
@@ -4,26 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adsgram Video Ad</title>
-    <script src="https://sad.adsgram.ai/js/ads.min.js"></script>
+    <script src="https://sad.adsgram.ai/js/sad.min.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            if (typeof AdController !== 'undefined') {
-                try {
-                    const result = await AdController.show({ blockId: 150 });
-                    if (result.done) {
-                        console.log('Ad watched till the end');
-                    } else {
-                        console.log('Ad not watched till the end');
-                    }
-                } catch (error) {
-                    console.error('Error showing ad:', error);
-                }
-            } else {
-                console.error('AdController is not defined');
-            }
-        });
-    </script>
 </body>
 </html>
